--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
          <div class="home-content">
            <h1>Hi, It's <span>SADIQ</span></h1>
            <h3 class="text-animation">I'm a <span></span></h3>
-            <p>Hi, as is mentioned my name is sadiq. and i'm currently persuing my B.Tech [CSE-NETWORKS] at <a href="https://mits.ac.in/"> MITS,Madanapalle</a>. A well-organized, creative and goal-oriented under- graduate possessing good communication, problem- solving and leadership skills with a flair to explore suitable avenues in Computer Science Engineering while learning advanced projects with efficiency and quality. </p>
+            <p>Hi, as is mentioned my name is sadiq. and i'm currently pursuing my B.Tech [CSE-NETWORKS] at <a href="https://mits.ac.in/"> MITS,Madanapalle</a>. A well-organized, creative and goal-oriented under- graduate possessing good communication, problem- solving and leadership skills with a flair to explore suitable avenues in Computer Science Engineering while learning advanced projects with efficiency and quality. </p>
             <div class="social-icons">
                 <a href="#" class="" id=""><i class='bx bxl-linkedin'></i></a>
                 <a href="#" class="" id=""><i class='bx bxl-github'></i></a>
